--- a/.classpath
+++ b/.classpath
@@ -7,5 +7,6 @@
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="softwares/selenium-server-4.21.0.jar"/>
+	<classpathentry kind="lib" path="softwares/commons-io-2.16.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
